# epndb

./: .gitignore  README.md  justfile  pyproject.toml  setup.cfg
src/epndb/: __init__.py  base.py  consts.py  core.py  models.py  plots.py  rich.py  scrap.py  utils.py
src/epndb/assets/: epn.db
src/epndb/data/: epn.db
