[metadata]
name =  epndb
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
author_email = "ujjwalpanda97@gmail.com"
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md
description = "Pythonic interface for the EPN's Database of Pulsar Profiles."

project_urls = 
    Home Page = https://github.com/astrogewgaw/epndb
    Source Code = https://github.com/astrogewgaw/epndb
    Documentation = https://epndb.readthedocs.io/en/latest
    Bug Reports = https://github.com/astrogewgaw/epndb/issues

classifiers =
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.6
include_package_data = True
setup_requires = setuptools_scm[toml]>=6.0

install_requires =
    bs4
    lxml
    rich
    numpy
    plotly
    requests
    sqlmodel

[options.packages.find]
where=src
